Fix: preタグのoverflow

--- a/assets/styles/layout/_article.scss
+++ b/assets/styles/layout/_article.scss
@@ -1,57 +1,59 @@
-article {
+.article {
   margin-top: 60px;
   margin-bottom: 60px;
 }
-article > * + * {
+.article > * + * {
   margin-top: 30px;
 }
-article .category {
+.article .category {
   display: inline-block;
   background-color: $c-main;
   color: $c-background;
   padding: 9px 25px;
 }
-article .category a {
+.article .category a {
   color: $c-background;
   text-decoration: none;
 }
-article h1 {
+.article h1 {
   font-size: fluid(20, 28, 320, 767);
   font-weight: bold;
 }
 
-article .caption {
+.article .caption {
   width: max(100%, 400px);
   aspect-ratio: 400/250;
 }
-article .caption img {
+.article .caption img {
   width: 100%;
   height: 100%;
 }
-article h2 {
+.article h2 {
   margin-top: 40px;
   font-size: fluid(18, 26, 320, 767);
   font-weight: bold;
 }
-article h3 {
+.article h3 {
   font-size: fluid(16, 22, 320, 767);
   font-weight: bold;
   border-left: solid 3px;
   padding-left: 8px;
 }
-article p {
+.article pre {
+  max-width: 700px;
+  overflow: auto;
 }
-article blockquote {
+.article blockquote {
   padding: 16px;
   padding-left: 74px;
   padding-bottom: 36px;
   background: $c-sub;
   position: relative;
 }
-article blockquote p {
+.article blockquote p {
   position: relative;
 }
-article blockquote::before {
+.article blockquote::before {
   content: " “ ";
   display: block;
   position: absolute;
@@ -60,12 +62,12 @@ article blockquote::before {
   font-size: 90px;
   color: $c-sub-quate;
 }
-article ul li {
+.article ul li {
   list-style: none;
   padding-left: 36px;
   position: relative;
 }
-article ul li::before {
+.article ul li::before {
   content: "";
   display: block;
   position: absolute;
@@ -78,7 +80,7 @@ article ul li::before {
   height: 11px;
   border-radius: 50%;
 }
-article p a {
+.article p a {
   color: $c-accent;
   text-decoration: underline;
 }
